# sec-insights

./: .gitignore  render.yaml
backend/: pyproject.toml
backend/app/: main.py
backend/app/chat/: tools.py
backend/app/core/: config.py
frontend/: .env.example  package-lock.json  package.json
frontend/src/: constants.tsx
frontend/src/api/: backend.tsx
frontend/src/api/utils/: documents.tsx
frontend/src/components/basics/: ModalPortal.tsx
frontend/src/components/conversations/: RenderConversations.tsx
frontend/src/components/landing-page/: MarketingSection.tsx  SelectTicker.tsx  TitleAndDropdown.tsx
frontend/src/components/pdf-viewer/: DisplayMultiplePdfs.tsx  PdfOptionsBar.tsx  ViewPdf.tsx  VirtualizedPdf.tsx
frontend/src/hooks/: useDocumentSelector.tsx  useMultiplePdfs.tsx  usePdfViewer.tsx
frontend/src/hooks/utils/: useScrollBreakpoint.tsx
frontend/src/pages/conversation/: [id].tsx
frontend/src/types/: conversation.tsx  document.tsx
frontend/src/utils/: documents.tsx  multi-line-highlight.tsx
