[tool.poetry]
name = "llama-app-backend"
version = "0.1.0"
description = "Backend for Llama App"
authors = ["Sourabh Desai <sourabhdesai@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11,<3.12"
fastapi = "^0.115.12"
pydantic = "^2.9.2"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.40"
aiosqlite = "^0.21.0"
asyncpg = "^0.30.0"
alembic = "^1.15.2"
psycopg2 = "^2.9.10"
psycopg2-binary = "^2.9.10"
sse-starlette = "^2.2.1"
pypdf = "^5.4.0"
anyio = "^4.9.0"
s3fs = "^2025.3.2"
fsspec = "^2025.3.2"
pdfkit = "^1.0.0"
pgvector = "^0.4.0"
sentry-sdk = {extras = ["fastapi"], version = "^2.25.1"}
llama-index-core = "^0.12.30"
polygon = "^1.2.6"
polygon-api-client = "^1.14.4"
nltk = "^3.9.1"
cachetools = "^5.5.2"
greenlet = "^3.1.1"
email-validator = "^2.2.0"
pydantic-settings = "^2.8.1"
openai = "^1.66.2"
llama-index-vector-stores-postgres = "^0.4.2"
llama-index-embeddings-openai = "^0.3.1"
llama-index-readers-file = "^0.4.7"
llama-index-llms-openai = "^0.3.33"
llama-index-agent-openai = "^0.4.6"
llama-index-question-gen-openai = "^0.3.0"
llama-index = "^0.12.29"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
pytest = "^7.3.2"
sseclient-py = "^1.7.2"
pdfkit = "^1.0.0"
fire = "^0.5.0"
sec-edgar-downloader = "~5.0"
pytickersymbols = "^1.13.0"
awscli-local = "^0.20"
llama-index-callbacks-arize-phoenix = "^0.4.0"
arize-phoenix = "^8.12.1"
aider-chat = "^0.81.1"

[tool.poetry.scripts]
start = "app.main:start"
migrate_db = "app.main:migrate_db"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
